Some Changes of Styles

--- a/src/App.css
+++ b/src/App.css
@@ -219,7 +219,7 @@ div.filter-search-box {
 /* Reviews Card Section Start */
 
 .reviews {
-	
+	margin-top: 30px;
 }
 
 /* Reviews Card Section End */
